force-app/main/default/objects/cwbtool__Component__c/fields/cwbtool__Description__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>