force-app/main/default/objects/cwbtool__Component__c/fields/cwbtool__Level__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Level__c</fullName>
    <label>Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>