force-app/main/default/objects/cwbtool__Component__c/fields/cwbtool__Parent__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>cwbtool__Component__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Parents</relationshipName>
    <type>Lookup</type>
</CustomField>