force-app/main/default/objects/cwbtool__Component__c/fields/cwbtool__RootId__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__RootId__c</fullName>
    <label>Root Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>